# Data-Structures

./: .gitignore  AUTOCOMPLETE_README.md  CMake  CMakeLists.txt  GUI  GUI.md  Main.cpp  Node.cpp  Node.h  PERSON3_QUICK_REFERENCE.txt  PERSON3_SEARCH_GUIDE.md  README.md  RadixTree.cpp  RadixTree.h  build_windows.bat  dictionary.txt  insert  jana.md  lujain.md  malak+nour.md  sample_tech_words.txt  sample_university_words.txt  test_radix  trace5_test  trace5_test.cpp  trace6_test  trace6_test.cpp  yousef.md
.github/workflows/: build.yml  release.yml
qt_gui/: CMakeLists.txt  ahead_gui.h  ghost_line_edit.cpp  ghost_line_edit.h  main.cpp  main_window.cpp  main_window.h  radix_tree_model.cpp  radix_tree_model.h  resources.qrc  side_menu.cpp  side_menu.h  snowflake_widget.cpp  snowflake_widget.h  status_manager.cpp  status_manager.h  theme.h
qt_gui/assets/: icon.icns
